[package]
name = "cero"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive"] }
sled = "0.34.6"
uuid = { version = "0.8", features = ["serde", "v4"] }
